src/test/deca/syntax/valid/created/vrai8.deca
{
	int a-b = 5-2;
}
