src/test/deca/syntax/invalid/created/faux28.deca
{
	int a = 23;
	a = 2;
	int b = 2;
}
